fix: disable table change on mobile views

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -272,10 +272,10 @@ table {
     border: 1px solid $table-border-color;
   }
 
-  @include media-query($on-laptop) {
-    display: block;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-            -ms-overflow-style: -ms-autohiding-scrollbar;
-  }
+  // @include media-query($on-laptop) {
+    // display: block;
+    // overflow-x: auto;
+    // -webkit-overflow-scrolling: touch;
+    //         -ms-overflow-style: -ms-autohiding-scrollbar;
+  // }
 }
